--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		<figure id="avatar">
 			<img src="avatar.jpg" />
 			<figcaption>
-				*
+				
 			</figcaption>
 		</figure>
 	</header>
 	<nav>
 		<ul>
-			<li id="flechita_nav"><a href="#">*</a></li>
+			<li id="flechita_nav"><a href="#"></a></li>
 			<li><a href="#">Phyton</a></li>
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">JavaScript</a></li>
@@ -46,7 +46,7 @@
 				<a class="tag_item" href="#">categoria</a>
 				<span class="fecha_item">Hace <strong>5</strong> minutos</span>
 				<a class="comentarios_item" href="#">455</a>
-				<a class="guardar_item" href="#">*</a>
+				<a class="guardar_item" href="#"></a>
 			</p>
 			<p class="votacion">
 				<a class="up" href="#"></a>
