--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<title>Pulse3 - Comunidad Pro</title>
 	<link rel="stylesheet" href="normalize.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="estilos.css" />
+	<link rel="stylesheet" href="responsive.css" />
 </head>
 <body>
 	<header>
@@ -31,6 +33,108 @@
 			<li id="publicar_nav"><a href="#">Publicar</a></li>
 		<ul>
 	</nav>
+	<aside id="bienvenida">
+		<h2>Hola, registate!</h2>
+		<p>Es importante registrarte porque Lol!</p>
+		<a id="registro" href="#">Registrate aca</a>
+		<p id="mensaje_registro">En serio, registrate por favor</p>
+	</aside>
+	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"/>
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Titulo del post</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> minutos</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>
+	</section>
+	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"/>
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Titulo del post</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> minutos</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>
+	</section>
+	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"/>
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Titulo del post</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> minutos</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>
+	</section>
+	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"/>
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Titulo del post</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">Freddy Vega</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">categoria</a>
+				<span class="fecha_item">Hace <strong>5</strong> minutos</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a>
+				3141
+				<a class="down" href="#"></a>
+			</p>
+		</article>
+	</section>
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
