--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 		<p>Es importante registrarte porque Lol!</p>
 		<a id="registro" href="#">Registrate aca</a>
 		<p id="mensaje_registro">En serio, registrate por favor</p>
+		<video width="300" controls>
+			<source src="video.webm" type="video/webn" />
+			<source src="video.mp4" type="video/mp4" />
+			<p>Su navegador es video</p>			
+		</video>
 	</aside>
 	<section id="contenido">
 		<article class="item">
